feat: enrich cart checkout preview
